--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <label for="yearly">YEARLY</label>
               </div>
           </div>
-          <button class="submit">GET STARTED</button>
+          <button onclick="myFunction()" class="submit">GET STARTED</button>
         </div>
   </section>
 
