--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
    </div>
 
    <!-- Feature panel 1 -->
-  <!-- <main> -->
     <section class="tabs">
       <div id="features" class="buttons">
         <button onclick="showTab(event,'pirmas')"><p>REGISTER</p></button>
@@ -278,6 +277,7 @@
       <button class="send">SEND</button>
     </div>      
   </div>
+  <!-- Footer -->
   <div class="ending">
     <div class="media">
       <img src="app/images/facebook-logo.svg" alt="facebook">
